created and tested backend
